--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "livePreview.defaultPreviewPath": "/ProgramasRita/Carrusel/carrouselObjetos.html"
+  "livePreview.defaultPreviewPath": "/M7TandaDeEjercicios/M7.3/M7.3.Exercici7BotigaDeSurf/surf.html"
 }
